# ConsoleHandle

./: CMakeLists.txt  README.md
include/ConsoleHandle/: ConsoleHandle.hpp
src/: CMakeLists.txt
src/consolehandle/: CMakeLists.txt  ConsoleHandle.cpp
src/example/: CMakeLists.txt  main.cpp
